# dns2

./: .gitignore  CMakeLists.txt  binary_string.c  binary_string.h  build.sh  communicate.c  communicate.h  dns_parser.c  dns_parser.h  file_parser.c  file_parser.h  linked_list.c  linked_list.h  main.c  map.c  map.h  query_record.c  query_record.h  run.sh  str_vector.c  str_vector.h  string.c  string.h  utility.c  utility.h
UT/: CMakeLists.txt  main_ut.c
